@@ -10,6 +10,7 @@ Google maps home map loads categories on first load instead of via ajax after pa
 Cyrillic characters not exporting correctly in import/export - FIXED
 With WPML search results listings for all languages - FIXED
 In registration send password to email note removed when user allowed choose own password - FIXED
+Menu save triggering rebuilding of category count and review counts - FIXED
 
 v1.4.8
 Send Enquiry & send to friend options removed from listings page - CHANGED
